--- a/public/css/style.css
+++ b/public/css/style.css
@@ -105,10 +105,12 @@ input[type=radio] {
   -ms-appearance: radio !important; }
 
 img {
+
   max-width: 100%;
   height: auto; }
 
 figure {
+
   margin: 0; }
 
 p {
@@ -116,65 +118,19 @@ p {
   font-size: 15px;
   color: #777; }
 
-h2 {
-  line-height: 1.66;
-  margin: 0;
-  padding: 0;
-  font-weight: 900;
-  color: #222;
-  font-family: 'Montserrat';
-  font-size: 24px;
-  text-transform: uppercase;
-  text-align: center;
-  margin-bottom: 40px; }
-
 .clear {
   clear: both; }
 
-body {
-  font-size: 14px;
-  line-height: 1.8;
-  color: #222;
-  font-weight: 400;
-  font-family: 'Montserrat';
-  background-image: url("../images/signup-bg.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  -moz-background-size: cover;
-  -webkit-background-size: cover;
-  -o-background-size: cover;
-  -ms-background-size: cover;
-  background-position: center center;
-  padding: 115px 0; }
+
 
 .container {
   width: 660px;
-  position: relative;
-  margin: 0 auto; }
+  margin: 2% auto; 
+  outline:  1px solid #2a2a2a;
+  border-radius: 50%;
+}
 
-.display-flex {
-  justify-content: space-between;
-  -moz-justify-content: space-between;
-  -webkit-justify-content: space-between;
-  -o-justify-content: space-between;
-  -ms-justify-content: space-between;
-  align-items: center;
-  -moz-align-items: center;
-  -webkit-align-items: center;
-  -o-align-items: center;
-  -ms-align-items: center; }
 
-.display-flex-center {
-  justify-content: center;
-  -moz-justify-content: center;
-  -webkit-justify-content: center;
-  -o-justify-content: center;
-  -ms-justify-content: center;
-  align-items: center;
-  -moz-align-items: center;
-  -webkit-align-items: center;
-  -o-align-items: center;
-  -ms-align-items: center; }
 
 .position-center {
   position: absolute;
@@ -334,7 +290,7 @@ input[type=checkbox]:not(old):checked + label > span:before {
   font-weight: 500;
   text-align: center;
   margin-top: 91px;
-  margin-bottom: 5px; }
+  margin-bottom: 55px; }
 
 .loginhere-link {
   font-weight: 700;
@@ -348,12 +304,6 @@ input[type=checkbox]:not(old):checked + label > span:before {
   z-index: 2;
   color: #555; }
 
-@media screen and (max-width: 768px) {
-  .container {
-    width: calc(100% - 40px);
-    max-width: 100%; } }
-@media screen and (max-width: 480px) {
-  .signup-content {
-    padding: 50px 25px; } }
+
 
 /*# sourceMappingURL=style.css.map */
