--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,6 @@
 
 
-
+/* LOGIN */
 
 /*//////////////////////////////////////////////////////////////////
 [ FONT ]*/
@@ -167,7 +167,7 @@ iframe {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  padding: 15px;
+  padding: 50px;
   background: #9053c7;
   background: -webkit-linear-gradient(-135deg, #c850c0, #4158d0);
   background: -o-linear-gradient(-135deg, #c850c0, #4158d0);
