--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,8 @@
+/*
+  REGISTRARSE
+*/
+
+
 /* @extend display-flex; */
 display-flex, .display-flex, .display-flex-center {
   display: flex;
@@ -55,7 +60,7 @@ list-type-ulli {
 @font-face {
   font-family: 'Montserrat';
   font-style: italic;
-  font-weight: 900;
+  font-weight: 50;
   src: url("../fonts/montserrat/montserrat-v12-latin-900.ttf"), url("../fonts/montserrat/montserrat-v12-latin-900.eot") format("embedded-opentype"), url("../fonts/montserrat/montserrat-v12-latin-900.svg") format("woff2"), url("../fonts/montserrat/montserrat-v12-latin-900.woff") format("woff"), url("../fonts/montserrat/montserrat-v12-latin-900.woff2") format("truetype"); }
 a:focus, a:active {
   text-decoration: none;
@@ -124,10 +129,25 @@ p {
 
 
 .container {
-  width: 660px;
+  width: 100%;
   margin: 2% auto; 
   outline:  1px solid #2a2a2a;
-  border-radius: 50%;
+  min-height: 100vh;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  background: #9053c7;
+  background: -webkit-linear-gradient(-135deg, #c850c0, #4158d0);
+  background: -o-linear-gradient(-135deg, #c850c0, #4158d0);
+  background: -moz-linear-gradient(-135deg, #c850c0, #4158d0);
+  background: linear-gradient(-135deg, #c850c0, #4158d0);
+
 }
 
 
@@ -149,7 +169,7 @@ p {
   -webkit-border-radius: 10px;
   -o-border-radius: 10px;
   -ms-border-radius: 10px;
-  padding: 50px 85px; }
+  padding: 40px 65px; }
 
 .form-group {
   overflow: hidden;
@@ -289,8 +309,8 @@ input[type=checkbox]:not(old):checked + label > span:before {
   color: #555;
   font-weight: 500;
   text-align: center;
-  margin-top: 91px;
-  margin-bottom: 55px; }
+  margin-top: 40px;
+  margin-bottom: 20px; }
 
 .loginhere-link {
   font-weight: 700;
