--- a/public/css/index.css
+++ b/public/css/index.css
@@ -8,18 +8,18 @@ h2{
   padding: 0;
   font-weight: 900;
 
-  font-family: 'Montserrat';
-  font-size: 24px;
-  text-transform: uppercase;
-  text-align: center;
-  margin-bottom: 40px;
+  font-family: 'Open Sans';
+  font-size: 18px;
+  text-transform: ;
+  text-align: 90%;
+  margin-bottom: 20px;
 }
 .barra {
 	position: relative;
 	float:right;
 	text-align: right;
 	width: 85%;
-	height: 5%;
+	height: 15%;
 	background: #333;
 	color: #fff;
     outline:  1px solid #2a2a2a;
@@ -37,11 +37,12 @@ h2{
 	list-style: none;
 	padding: 0;
 	margin: 0;
+	height: 100%;	
 }
 .sidebar h2 {
 	text-align: center;
 	margin: 10px;
-	background: #2a2a2a;
+	background: #2a2a2a;	
 	
 }
 .sidebar li {
@@ -63,20 +64,26 @@ h2{
 .imagenes{
 	width: 100%;
 	height: 100%;
-	background-color: black;
+	  background: #9053c7;
+  background: -webkit-linear-gradient(-135deg, #c850c0, #4158d0);
+  background: -o-linear-gradient(-135deg, #c850c0, #4158d0);
+  background: -moz-linear-gradient(-135deg, #c850c0, #4158d0);
+  background: linear-gradient(-135deg, #c850c0, #4158d0);
 }
 .imagenes figure{
-	width: 40%;
-	height: 50%;
+	/*
+	width: 100%;
+	height: 100%;	
 	margin:auto;
 	position: relative;
 	display: inline-block;
 	border: 1px solid red;
+	*/
 }
 .imagenes img{
 	margin: auto;
-	width: 950px;
-	height: 430px;
+	width: 100%;
+	height: 100%;
 }
 
 .contenido {
