--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,10 +5,7 @@
 /*//////////////////////////////////////////////////////////////////
 [ FONT ]*/
 
-@font-face {
-  font-family: Poppins-Regular;
-  src: url('../fonts/poppins/Poppins-Regular.ttf'); 
-}
+
 
 @font-face {
   font-family: Poppins-Bold;
@@ -28,29 +25,11 @@
 /*//////////////////////////////////////////////////////////////////
 [ RESTYLE TAG ]*/
 
-* {
-	margin: 0px; 
-	padding: 0px; 
-	box-sizing: border-box;
-}
 
-body, html {
-	height: 100%;
-	font-family: Poppins-Regular, sans-serif;
-}
 
-/*---------------------------------------------*/
-a {
-	font-family: Poppins-Regular;
-	font-size: 14px;
-	line-height: 1.7;
-	color: #666666;
-	margin: 0px;
-	transition: all 0.4s;
-	-webkit-transition: all 0.4s;
-  -o-transition: all 0.4s;
-  -moz-transition: all 0.4s;
-}
+
+
+
 
 a:focus {
 	outline: none !important;
@@ -62,22 +41,7 @@ a:hover {
 }
 
 /*---------------------------------------------*/
-h1,h2,h3,h4,h5,h6 {
-	margin: 0px;
-}
 
-p {
-	font-family: Poppins-Regular;
-	font-size: 14px;
-	line-height: 1.7;
-	color: #666666;
-	margin: 0px;
-}
-
-ul, li {
-	margin: 0px;
-	list-style-type: none;
-}
 
 
 /*---------------------------------------------*/
@@ -133,19 +97,6 @@ iframe {
 
 /*//////////////////////////////////////////////////////////////////
 [ Utility ]*/
-.txt1 {
-  font-family: Poppins-Regular;
-  font-size: 13px;
-  line-height: 1.5;
-  color: #999999;
-}
-
-.txt2 {
-  font-family: Poppins-Regular;
-  font-size: 13px;
-  line-height: 1.5;
-  color: #666666;
-}
 
 
 /*//////////////////////////////////////////////////////////////////
@@ -153,12 +104,12 @@ iframe {
 
 .limiter {
   width: 100%;
-  margin: 0 auto;
+ 
 }
 
 .container-login100 {
   width: 100%;  
-  min-height: 100vh;
+  
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
@@ -167,7 +118,7 @@ iframe {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  padding: 50px;
+  padding: 50px 0px 160px 0px;
   background: #9053c7;
   background: -webkit-linear-gradient(-135deg, #c850c0, #4158d0);
   background: -o-linear-gradient(-135deg, #c850c0, #4158d0);
@@ -193,9 +144,7 @@ iframe {
 
 /*------------------------------------------------------------------
 [  ]*/
-.login100-pic {
-  width: 316px;
-}
+
 
 .login100-pic img {
   max-width: 100%;
@@ -264,19 +213,6 @@ iframe {
   animation: anim-shadow 0.5s ease-in-out forwards;
 }
 
-@-webkit-keyframes anim-shadow {
-  to {
-    box-shadow: 0px 0px 70px 25px;
-    opacity: 0;
-  }
-}
-
-@keyframes anim-shadow {
-  to {
-    box-shadow: 0px 0px 70px 25px;
-    opacity: 0;
-  }
-}
 
 .symbol-input100 {
   font-size: 15px;
