--- a/public/css/style.css
+++ b/public/css/style.css
@@ -109,10 +109,7 @@ input[type=radio] {
   -o-appearance: radio !important;
   -ms-appearance: radio !important; }
 
-img {
 
-  max-width: 100%;
-  height: auto; }
 
 figure {
 
@@ -130,9 +127,8 @@ p {
 
 .container {
   width: 100%;
-  margin: 2% auto; 
   outline:  1px solid #2a2a2a;
-  min-height: 100vh;
+  
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
@@ -141,7 +137,7 @@ p {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  padding: 20px;
+  
   background: #9053c7;
   background: -webkit-linear-gradient(-135deg, #c850c0, #4158d0);
   background: -o-linear-gradient(-135deg, #c850c0, #4158d0);
@@ -153,9 +149,8 @@ p {
 
 
 .position-center {
-  position: absolute;
-  top: 50%;
-  left: 50%;
+  
+ 
   transform: translate(-50%, -50%);
   -moz-transform: translate(-50%, -50%);
   -webkit-transform: translate(-50%, -50%);
@@ -163,13 +158,15 @@ p {
   -ms-transform: translate(-50%, -50%); }
 
 .signup-content {
+
   background: #fff;
   border-radius: 10px;
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
   -o-border-radius: 10px;
   -ms-border-radius: 10px;
-  padding: 40px 65px; }
+  padding: 40px 120px;
+  margin: 80px 50px 174px 60px; }
 
 .form-group {
   overflow: hidden;
