--- a/public/css/index.css
+++ b/public/css/index.css
@@ -7,10 +7,10 @@ h2{
   margin: 0;
   padding: 0;
   font-weight: 900;
-
-  font-family: 'Open Sans';
-  font-size: 18px;
-  text-transform: ;
+	text-align: center;
+  font-family: 'Montserrat';
+  font-size: 24px;
+  text-transform: uppercase;
   text-align: 90%;
   margin-bottom: 20px;
 }
@@ -19,13 +19,16 @@ h2{
 	float:right;
 	text-align: right;
 	width: 85%;
-	height: 15%;
+	height: 5%;
+
+	max-height: 890px;
+	
 	background: #333;
 	color: #fff;
     outline:  1px solid #2a2a2a;
 }
 .sidebar {
-	position: absolute;
+	position: fixed;
 	width: 15%;
 	height: 100%;	
 	background: #333;	
@@ -82,16 +85,25 @@ h2{
 }
 .imagenes img{
 	margin: auto;
+	width: 75%;
+	height: 70%;
+}
+.Gcontenido{
+	position: relative;
+	width: 1632px;
+	height: 878px;
+	top: 60px;
+	left: 15%;
+}
+.contenido {
 	width: 100%;
 	height: 100%;
-}
 
-.contenido {
-	width: 85%;
-	height: 90%;
-	position: absolute;
-	margin: 3% 15%;
 	
+	position: absolute;
+	border: 2px;
+	
+	outline:  1px solid #2a2a2a;
     transition: all 0.3s;
 }
 .menu-bar {
