--- a/public/css/index.css
+++ b/public/css/index.css
@@ -74,20 +74,15 @@ h2{
   background: linear-gradient(-135deg, #c850c0, #4158d0);
 }
 .imagenes figure{
-	/*
+	
 	width: 100%;
 	height: 100%;	
-	margin:auto;
-	position: relative;
+	
+	position: absolute;
 	display: inline-block;
-	border: 1px solid red;
-	*/
+	
 }
-.imagenes img{
-	margin: auto;
-	width: 75%;
-	height: 70%;
-}
+
 .Gcontenido{
 	position: relative;
 	width: 1632px;
