--- a/public/css/index.css
+++ b/public/css/index.css
@@ -7,10 +7,10 @@ h2{
   margin: 0;
   padding: 0;
   font-weight: 900;
-	text-align: center;
-  font-family: 'Montserrat';
+text-align: center;
+  font-family: 'Comic-Sans';
   font-size: 24px;
-  text-transform: uppercase;
+  
   text-align: 90%;
   margin-bottom: 20px;
 }
@@ -75,14 +75,16 @@ h2{
 }
 .imagenes figure{
 	
-	width: 100%;
-	height: 100%;	
-	
-	position: absolute;
+	width: 40%;
+	height: 40%;	
+	position: relative;
 	display: inline-block;
 	
 }
-
+.imagenes figure img{
+	width: 650px;
+	height: 400px;
+}
 .Gcontenido{
 	position: relative;
 	width: 1632px;
