--- a/public/css/index.css
+++ b/public/css/index.css
@@ -14,18 +14,19 @@ text-align: center;
   text-align: 90%;
   margin-bottom: 20px;
 }
+a:hover {
+	text-decoration: none;
+  color: #57b846;
+}
 .barra {
 	position: relative;
 	float:right;
 	text-align: right;
-	width: 85%;
-	height: 5%;
-
-	max-height: 890px;
-	
+	width: 100%;
+	height: 40px;
 	background: #333;
 	color: #fff;
-    outline:  1px solid #2a2a2a;
+    /*outline:  1px solid #2a2a2a;*/
 }
 .sidebar {
 	position: fixed;
@@ -33,7 +34,7 @@ text-align: center;
 	height: 100%;	
 	background: #333;	
 	color: #fff;
-    outline:  1px solid #2a2a2a;
+    /*outline:  1px solid #2a2a2a;*/
 
 }
 .sidebar ul {
@@ -55,6 +56,7 @@ text-align: center;
 }
 .sidebar li:hover {
 	background: #444;
+	color: #57b846;
     border-left: 5px solid #eee;
 	
 }
@@ -82,14 +84,14 @@ text-align: center;
 	
 }
 .imagenes figure img{
-	width: 650px;
-	height: 400px;
+	width: 450px;
+	height: 250px;
 }
 .Gcontenido{
 	position: relative;
-	width: 1632px;
-	height: 878px;
-	top: 60px;
+	width: 85%;
+	height: 60%;
+	top: 40px;
 	left: 15%;
 }
 .contenido {
