--- a/public/css/main.css
+++ b/public/css/main.css
@@ -109,7 +109,7 @@ iframe {
 
 .container-login100 {
   width: 100%;  
-  
+  height: 80%;
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
@@ -118,7 +118,7 @@ iframe {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  padding: 50px 0px 160px 0px;
+  padding: 50px 0px 50px 0px;
   background: #9053c7;
   background: -webkit-linear-gradient(-135deg, #c850c0, #4158d0);
   background: -o-linear-gradient(-135deg, #c850c0, #4158d0);
@@ -127,7 +127,7 @@ iframe {
 }
 
 .wrap-login100 {
-  width: 960px;
+  width: 60%;
   background: #fff;
   border-radius: 10px;
   overflow: hidden;
@@ -139,7 +139,7 @@ iframe {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding: 177px 130px 33px 95px;
+  padding: 100px 120px 33px 95px;
 }
 
 /*------------------------------------------------------------------
@@ -147,14 +147,14 @@ iframe {
 
 
 .login100-pic img {
-  max-width: 100%;
+  max-width: 80%;
 }
 
 
 /*------------------------------------------------------------------
 [  ]*/
 .login100-form {
-  width: 290px;
+  width: 280px;
 }
 
 .login100-form-title {
